--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "antd": "^5.4.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "moment": "^2.29.4",
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
