--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "antd": "^5.4.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "moment": "^2.29.4",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.1.0",
     "next": "13.3.4",
     "postcss": "8.4.23",
+    "qs": "^6.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
