--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "invitation-app",
   "version": "0.1.0",
+  "main": "server.js",
   "private": true,
+  "proxy": "http://localhost:5000",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
