--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "moment": "^2.29.4",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
+    "mysql": "^2.18.1",
     "next": "13.3.4",
+    "next-connect": "^0.13.0",
+    "nodemon": "^2.0.22",
     "postcss": "8.4.23",
     "qs": "^6.11.1",
     "react": "18.2.0",
